# quantumharmony-faucet

./: Cargo.toml  README.md
docs/: TESTNET_GUIDE.md
scripts/: monitor-validators.sh  tps-test.sh
src/: main.rs
