[package]
name = "quantumharmony-faucet"
version = "1.0.0"
edition = "2021"
description = "Testnet faucet for QuantumHarmony blockchain"
license = "MIT"

[dependencies]
# HTTP server
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }

# Substrate interaction
subxt = "0.34"
sp-core = "28.0"
sp-keyring = "31.0"
codec = { package = "parity-scale-codec", version = "3.6" }

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Rate limiting
dashmap = "5.5"
chrono = "0.4"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

[profile.release]
opt-level = 3
lto = true
